# mini-inx-sim

./: Cargo.toml
inx/: Cargo.toml
inx-cli/: Cargo.toml
inx-cli/src/: main.rs  ui.rs
inx-ui/: Cargo.toml
inx-ui/src/: app.rs  main.rs  render.rs  tree.rs
inx/src/: lib.rs
inx/src/human/: characteristic.rs  characteristics.rs  couple.rs  gene.rs  merger.rs  mod.rs
inx/src/micro_human/: mod.rs
inx/src/simulator/: generator.rs  history.rs  mod.rs
inx/src/util/: mod.rs
inx/src/world/: mod.rs
