[package]
name = "inx-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.20.1", default-features = false, features = ["glow", "default_fonts", "dark-light"] }
egui = "0.20.1"
inx = { version = "0.1.0", path = "../inx" }
poll-promise = "0.2.0"
rand = "0.8.5"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2.8", features = ["js"] }

