[package]
name = "inx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
rand = "0.8.5"

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2.8", features = ["js"] }
